--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.6.7",
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   }
 }
